-------------
Version 0.6.2
-------------

COCKPIT
- Added ability to view and manage Amazon CloudFront distributions using
  a dialog box.
- Improved support for DevPay credentials, which can now be set and saved 
  directly in the login dialog box instead of only in a properties file.

SYNCHRONIZE
- AWS credentials and the cryptographic password can now be provided via prompts
  on the command-line, rather than merely through a properties file.
- Added the --credentials option, which allows AWS credentials to be loaded from 
  an encrypted file rather than an insecure properties file. The encrypted file 
  can be created with the AWSCredentials API or the Cockpit application.
- Synchronize will act as an anonymous client if empty values are provided
  as the AWS access and secret keys. When the S3 connection is anonymous, only 
  public buckets will be accessible.
- Fixed a bug that prevented Synchronize from recognizing duplicate file names
  when uploading to an S3 subdirectory path when using the --batch option.  


TOOLKIT

  * General

- Added initial implementation of CloudFront service.
- Added property "cloudfront-service.internal-error-retry-max" for defining the
  retry limit for CloudFront internal service errors.
- Improved support for accessing S3 using DevPay credentials with a new
  credentials class for defining and storing these credentials: 
  AWSDevPayCredentials
- Added a class (AWSDevPayProduct) to represent a DevPay product, and to load 
  information about pre-defined products from the properties file 
  devpay_products.properties.

  * REST Implementation

- Added support for proxy authentication settings in jets3t.properties:
  "proxy-user", "proxy-password", and "proxy-domain"
- The service's HTTP proxy settings can be updated an reapplied on-demand using
  a range of #initHttpProxy methods.
- The HttpConnectionManager and HttpClient objects used by the REST service can